--- a/AccessibilityService/app/src/main/res/xml/accessibility_service_config.xml
+++ b/AccessibilityService/app/src/main/res/xml/accessibility_service_config.xml
@@ -6,4 +6,5 @@
     android:canRetrieveWindowContent="true"
     android:description="@string/accessibility_service_description"
     android:notificationTimeout="100"
+    android:packageNames="com.google.android.deskclock"
     android:settingsActivity="com.example.android.apis.accessibility.TestBackActivity" />
